add img & type module js

--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
 </head>
 <body>
 <section class='maze'>
-    <div><input type="file" onChange={fileHandler}/>
-        <p>{leadTime}</p>
+    <div><input type="file"/>
     </div>
     <canvas id="canvas" width="500" height='500'></canvas>
 
 </section>
+
+<script src="js/js.js" type="module"></script>
 </body>
 </html>
