--- a/index.html
+++ b/index.html
@@ -5,16 +5,17 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <link rel="stylesheet" href="maze.css">
+    <title>Maze</title>
 </head>
 <body>
 <section class='maze'>
     <div><input type="file"/>
     </div>
     <canvas id="canvas" width="500" height='500'></canvas>
-
+<div id="time"></div>
 </section>
 
-<script src="js/js.js" type="module"></script>
+<script src="js/js.js"></script>
 </body>
 </html>
